# scdf-heuristics-core

./: CMakeLists.txt  dr_rc_vnd_timing.csv
benchmarks/: dr_rc_vnd_timing.csv
core/: CMakeLists.txt
core/include/: neighborhoods.hpp  solvers.hpp  step_function.hpp  stopping_criteria.hpp  structures.hpp
core/src/: beam_search.cpp  clustering.cpp  construction.cpp  encoding.cpp  genetic.cpp  grasp.cpp  instance.cpp  large_neighborhood.cpp  local_search.cpp  neighborhoods.cpp  random.cpp  sa.cpp  solution.cpp  utils.cpp  vnd.cpp
pipelines/: CMakeLists.txt  competition.cpp  main_a.cpp  path_utils.hpp  test_algorithm.cpp  test_fairness.cpp  tuning_ga.cpp  tuning_ln.cpp
results/: algorithm_comparison.csv  data.ipynb  dr_rc_vnd_timing.csv  tuning_ga.csv  tuning_ln.csv
results/instance61_nreq1000_nveh20_gamma879/: bs.txt  dc.txt  ga.txt  ln.txt  rc.txt  results.csv
results/instance61_nreq100_nveh2_gamma91/: bs.txt  dc.txt  ga.txt  ln.txt  ls.txt  rc.txt  results.csv  sa.txt
wow.csv/: dr_rc_vnd_timing.csv
wow.csvclear/: dr_rc_vnd_timing.csv
